tests/vertical-slice/accept/safe_handle_resources_close.hew
import std::path;

import std::semaphore;

import std::deque;

import std::time::cron;

import std::net::http;

import std::net::quic;

import std::net::url;

import std::encoding::xml;

fn close_request(value: http.Request) {
    value.close();
}

fn close_event(value: quic.QUICEvent) {
    value.close();
}

fn main() -> i64 {
    let glob = path.glob("tests/vertical-slice/accept/*.hew");
    glob.close();
    let sem = semaphore.new(1);
    sem.close();
    let queue = deque.new();
    queue.close();
    let schedule = cron.parse("* * * * *");
    schedule.close();
    let parsed_url = url.parse("https://example.com");
    parsed_url.close();
    let node = xml.parse("<root/>");
    node.close();
    0
}
